<resources>
    <string name="app_name">Calculator</string>
    <string name="caption_language">Language</string>
    <string name="caption_DPI">DPI</string>
    <string name="caption_orientation">Orientation</string>

    <string name="Language">English</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>

    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button0" translatable="false">0</string>
    <string name="buttonPt" translatable="false">,</string>
    <string name="buttonMinus" translatable="false">-</string>
    <string name="buttonPlus" translatable="false">+</string>
    <string name="buttonResult" translatable="false">=</string>
    <string name="buttonMultiply" translatable="false">X</string>
    <string name="PlusMinus" translatable="false">±</string>
    <string name="buttonDelimiter" translatable="false">/</string>
    <string name="buttonRightBracket" translatable="false">)</string>
    <string name="buttonLeftBracket" translatable="false">(</string>
    <string name="buttonSqrt" translatable="false">√</string>
    <string name="Square" translatable="false">²</string>
    <string name="History">History</string>
    <string name="textViewMain">Evaluation</string>
    <string name="buttonCE" translatable="false">CE</string>
    <string name="displayoperationnumber">displayOperationNumber</string>
    <string name="btnMoveToTest">Move to settings</string>
    <string name="loginName">Login</string>
    <string name="password">Password</string>
    <string name="material_black">Black</string>
    <string name="material_red">Red</string>
    <string name="material_default">Default theme</string>
    <string name="not_name">Not correct simbol</string>
    <string name="weak_password">Not correct pwd</string>
    <string name="tvSettingsCalc">Settings theme calc</string>
    <string name="material_blue">Blue</string>
    <string name="btnSave">Save settings</string>
</resources>