<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="@dimen/marginBottomKeyBoard"
    android:columnCount="4">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSqrt"
        style="@style/CalcKeySquare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="5"
        android:layout_column="1"
        android:text="@string/buttonSqrt"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLeftBracket"
        style="@style/CalcKeySquare"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/buttonLeftBracket"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRightBracket"
        style="@style/CalcKeySquare"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/buttonRightBracket"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelimiter"
        style="@style/CalcKeySquare"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/buttonDelimiter"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/CalcKeySquare"
        android:text="@string/button7"
        android:textSize="@dimen/key_text_size" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/CalcKeySquare"
        android:text="@string/button8"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/CalcKeySquare"
        android:text="@string/button9"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        style="@style/CalcKeySquare"
        android:text="@string/buttonMultiply"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/CalcKeySquare"
        android:text="@string/button4"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/CalcKeySquare"
        android:text="@string/button5"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/CalcKeySquare"
        android:text="@string/button6"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        style="@style/CalcKeySquare"
        android:text="@string/buttonMinus"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/CalcKeySquare"
        android:text="@string/button1"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/CalcKeySquare"
        android:text="@string/button2"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/CalcKeySquare"
        android:text="@string/button3"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        style="@style/CalcKeySquare"
        android:text="@string/buttonPlus"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlusMinus"
        style="@style/CalcKeySquare"
        android:text="@string/PlusMinus"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/CalcKeySquare"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/button0"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSquare"
        style="@style/CalcKeySquare"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/Square"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCE"
        style="@style/CalcKeySquare"
        android:backgroundTint="#B1134A"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/buttonCE"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonP"
        style="@style/CalcKeySquare"
        android:layout_row="5"
        android:layout_column="2"
        android:text="@string/buttonPt"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResult"
        style="@style/CalcKeySquare"
        android:layout_row="4"
        android:layout_rowSpan="2"
        android:layout_column="3"
        android:layout_gravity="fill"
        android:backgroundTint="#121657"
        android:text="@string/buttonResult"
        android:textSize="@dimen/key_text_size" />

</GridLayout>