<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="3"
    android:gravity="center">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSqrt"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonSqrt"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonLeftBracket"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonLeftBracket"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonRightBracket"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonRightBracket"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonDelimiter"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonDelimiter"
            android:textSize="@dimen/key_text_size" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button7"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button7"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/button8"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button8"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button9"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonMultiply"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonMultiply"
            android:textSize="@dimen/key_text_size" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button4"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button5"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button6"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonMinus"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonMinus"
            android:textSize="@dimen/key_text_size" />


    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button3"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonPlus"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonPlus"
            android:textSize="@dimen/key_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/buttonPlusMinus"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/PlusMinus"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/button0"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonP"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonPt"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonResult"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/buttonResult"
            android:textSize="@dimen/key_text_size" />
    </TableRow>
</TableLayout>
